# typst_thesis

./: .gitignore  Makefile  README.md  Typst.code-workspace  acronyms.typ  imports.typ  main.typ  pyproject.toml
assets/bib/: Bib.bib  bib_data.json
assets/bib/files/5/: supercharged-dhbw.html
assets/code/: code_data.json
assets/code/example-code/: README.md
assets/tables/example/: data.csv
chapters/: abstract.typ  abstract_eng.typ  appendix.typ  fundamentals.typ  intro.typ
scripts/: generate_appendix.py
