[project]
name = "typst_thesis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Max Alberti", email = "maxalberti@gmx.de" }
]
dependencies = [
    "pybtex>=0.24.0",
    "setuptools>=72.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["scripts/"]
